[gd_scene load_steps=13 format=3 uid="uid://c2xv747ort8eb"]

[ext_resource type="Theme" uid="uid://s3o3wkvbt3ej" path="res://DTMono24.tres" id="1_qkqr8"]
[ext_resource type="Script" path="res://Shared/Box/box.gd" id="2_8ef2i"]
[ext_resource type="FontFile" uid="uid://dp6lncabgomk" path="res://Fonts/DTM-Mono.otf" id="3_nbbuj"]
[ext_resource type="Texture2D" uid="uid://cd1m6kn7sr1xx" path="res://Shared/Box/boxfancy.png" id="3_wfldg"]
[ext_resource type="AudioStream" uid="uid://bp5oyjspngmp2" path="res://Shared/Text/Clicks/Files/generic2.wav" id="4_bk3s1"]
[ext_resource type="Texture2D" uid="uid://ck1wb2qlndn4h" path="res://Shared/Soul/soulborder.png" id="6_k5u1f"]
[ext_resource type="AudioStream" uid="uid://bhebxqay4seyt" path="res://BattleEngine/Buttons/Sounds/snd_squeak.wav" id="7_2uqdt"]
[ext_resource type="AudioStream" uid="uid://c00j1651771jc" path="res://BattleEngine/Buttons/Sounds/snd_select.wav" id="8_wnaug"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ws5oq"]
size = Vector2(10000, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ujm0"]
size = Vector2(10, 1000)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aigd8"]
size = Vector2(10000, 200)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_24v0d"]
size = Vector2(10, 1000)

[node name="box" type="Control"]
z_index = 50
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -55.0
offset_bottom = -330.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(293, 75)
script = ExtResource("2_8ef2i")
type = 7
type2 = 0
margin = 8.0

[node name="MenuSoul" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
z_index = 11
position = Vector2(25, 35)
texture = ExtResource("6_k5u1f")
offset = Vector2(3, 1)

[node name="Squeak" type="AudioStreamPlayer" parent="MenuSoul"]
stream = ExtResource("7_2uqdt")

[node name="Select" type="AudioStreamPlayer" parent="MenuSoul"]
stream = ExtResource("8_wnaug")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BoxContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(292.5, 75)
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="NinePatchRect" type="NinePatchRect" parent="BoxContainer"]
modulate = Color(0.721569, 0.721569, 0.721569, 1)
light_mask = 2
z_index = 10
clip_contents = true
custom_minimum_size = Vector2(22, 22)
layout_mode = 2
theme = ExtResource("1_qkqr8")
texture = ExtResource("3_wfldg")
patch_margin_left = 11
patch_margin_top = 11
patch_margin_right = 11
patch_margin_bottom = 11

[node name="PutThings" type="Control" parent="BoxContainer/NinePatchRect"]
z_index = -8
layout_mode = 2
anchors_preset = 0
offset_right = 577.0
offset_bottom = 142.0

[node name="Bones" type="Node2D" parent="BoxContainer/NinePatchRect/PutThings"]

[node name="NonBones" type="Node2D" parent="BoxContainer/NinePatchRect/PutThings"]

[node name="Collisions" type="StaticBody2D" parent="BoxContainer/NinePatchRect"]
position = Vector2(-5, -5)
collision_priority = 2.0

[node name="Up" type="CollisionShape2D" parent="BoxContainer/NinePatchRect/Collisions"]
shape = SubResource("RectangleShape2D_ws5oq")
debug_color = Color(1, 0.380392, 0.658824, 0.65098)

[node name="Right" type="CollisionShape2D" parent="BoxContainer/NinePatchRect/Collisions"]
position = Vector2(573, 1)
shape = SubResource("RectangleShape2D_8ujm0")
debug_color = Color(1, 0.380392, 0.658824, 0.65098)

[node name="Down" type="CollisionShape2D" parent="BoxContainer/NinePatchRect/Collisions"]
position = Vector2(0, 138)
shape = SubResource("RectangleShape2D_aigd8")
debug_color = Color(1, 0.380392, 0.658824, 0.65098)

[node name="Left" type="CollisionShape2D" parent="BoxContainer/NinePatchRect/Collisions"]
position = Vector2(2, 0)
shape = SubResource("RectangleShape2D_24v0d")
one_way_collision_margin = 0.0
debug_color = Color(1, 0.380392, 0.658824, 0.65098)

[node name="Ast" type="Label" parent="BoxContainer/NinePatchRect"]
light_mask = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 17.0
offset_right = 16.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("..")
focus_neighbor_top = NodePath("..")
focus_neighbor_right = NodePath("..")
focus_neighbor_bottom = NodePath("..")
theme_override_fonts/font = ExtResource("3_nbbuj")
theme_override_font_sizes/font_size = 26
text = "*                 *
*                 *
*                 *"
autowrap_mode = 1

[node name="Noise" type="AudioStreamPlayer" parent="BoxContainer/NinePatchRect/Ast"]
stream = ExtResource("4_bk3s1")
max_polyphony = 2

[node name="Blitter" type="RichTextLabel" parent="BoxContainer/NinePatchRect/Ast"]
light_mask = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 2.0
offset_right = -13.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("..")
focus_neighbor_top = NodePath("..")
focus_neighbor_right = NodePath("..")
focus_neighbor_bottom = NodePath("..")
theme_override_fonts/normal_font = ExtResource("3_nbbuj")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
autowrap_mode = 2
visible_characters_behavior = 1

[node name="Label" type="RichTextLabel" parent="BoxContainer/NinePatchRect/Ast"]
light_mask = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 2.0
offset_right = -13.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("..")
focus_neighbor_top = NodePath("..")
focus_neighbor_right = NodePath("..")
focus_neighbor_bottom = NodePath("..")
theme_override_fonts/normal_font = ExtResource("3_nbbuj")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
autowrap_mode = 2
visible_characters_behavior = 1

[node name="Label2" type="RichTextLabel" parent="BoxContainer/NinePatchRect/Ast"]
light_mask = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 305.0
offset_top = 2.0
offset_right = 268.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../Label")
focus_neighbor_top = NodePath("../Label")
focus_neighbor_right = NodePath("../Label")
focus_neighbor_bottom = NodePath("../Label")
theme_override_fonts/normal_font = ExtResource("3_nbbuj")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
autowrap_mode = 2
visible_characters_behavior = 1

[node name="Label3" type="RichTextLabel" parent="BoxContainer/NinePatchRect/Ast"]
light_mask = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 305.0
offset_top = 72.0
offset_right = 268.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../Label")
focus_neighbor_top = NodePath("../Label")
focus_neighbor_right = NodePath("../Label")
focus_neighbor_bottom = NodePath("../Label")
theme_override_fonts/normal_font = ExtResource("3_nbbuj")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
autowrap_mode = 2
visible_characters_behavior = 1
